Do lab of Part 5 - Data Patterns

--- a/angular-for-architects/src/app/app.component.html
+++ b/angular-for-architects/src/app/app.component.html
@@ -1,1 +1,3 @@
 <app-try-observable-service></app-try-observable-service>
+<app-observable-store></app-observable-store>
+<app-observable-store-buttons></app-observable-store-buttons>
