Working with State Management - Observable Store

--- a/angular-for-architects/src/app/lab2 Working with State Management Observable Store/observable-store/observable-store.component.html
+++ b/angular-for-architects/src/app/lab2 Working with State Management Observable Store/observable-store/observable-store.component.html
@@ -1,4 +1,4 @@
-<p>2nd lab - Working with state management</p>
+<p>Lab - Working with state management</p>
 <div *ngIf="data">
     <div>Title: {{data.title}}</div>
     <div>Text: {{data.text}}</div>
